--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <div id="header">
        <div class="container">
         <nav>
-            <img src="images/Harshlogo.png.png" width="80" height="80"  class="logo">
+            <img src="Harshlogo.png.png" width="80" height="80"  class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png" alt="">
+                    <img src="user.png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -104,7 +104,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work-1.png">
+                <img src="work-1.png">
                 <div class="layer">
                     <h3>Social Media App</h3>
                     <p>The app connects you to the talented people around the world.
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png">
+                <img src="work-2.png">
                 <div class="layer">
                 <h3>Music App</h3>
                     <p>The app connects you to the talented people around the world.
@@ -123,7 +123,7 @@
             </div>
 
             <div class="work">
-                <img src="images/work-3.png">
+                <img src="work-3.png">
                 <div class="layer">
                     <h3>Online Shopping App</h3>
                         <p>The app connects you to the talented people around the world.
@@ -149,7 +149,7 @@
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
